syntax = "proto3";

//option go_package = ".;hello";
option go_package = "github.com/xwzy/grpc-example/api/hello";

package hello;

service Hello{
  rpc getGreeting (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}